force-app/main/default/objects/Supplier_Share__c/Supplier_Share__c.object-meta.xml
<CustomObject>
    <description>Migrated Cuotas de proveedores Object from Vidrala Org

Objeto que recopila las cuotas de los proveedores dentro de un cliente a nivel hasta detalle de modelo y precio</description>
    <label>Supplier Share</label>
    <nameField>
        <displayFormat>C{0000000}</displayFormat>
        <label>Supplier Share</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>