force-app/main/default/objects/Supplier_Share__c/fields/Calc_Difference__c.field-meta.xml
<CustomField>
    <fullName>Calc_Difference__c</fullName>
    <formula>(Competitor_Units__c / Account__r.Total_Purchase_Power__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc: Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>