force-app/main/default/objects/Supplier_Share__c/fields/Calc_Percent__c.field-meta.xml
<CustomField>
    <fullName>Calc_Percent__c</fullName>
    <formula>Competitor_Units__c / Account__r.Total_Purchase_Power__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc: Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>