force-app/main/default/objects/Supplier_Share__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Vidrala</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Encirc</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Shares (Competitor)</relationshipLabel>
    <relationshipName>Supplier_Shares1</relationshipName>
    <type>Lookup</type>
</CustomField>