force-app/main/default/objects/Supplier_Share__c/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Price</label>
    <referenceTo>Competitor_Price__c</referenceTo>
    <relationshipLabel>Supplier Shares</relationshipLabel>
    <relationshipName>Supplier_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>