force-app/main/default/objects/Supplier_Share__c/fields/Competitor_Price_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price_Date__c</fullName>
    <formula>Competitor_Price__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Price Date</label>
    <type>Date</type>
</CustomField>