force-app/main/default/objects/Supplier_Share__c/fields/Competitor_Units__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Units__c</fullName>
    <label>Competitor Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>