force-app/main/default/objects/Supplier_Share__c/fields/OBSERVACIONES__c.field-meta.xml
<CustomField>
    <fullName>OBSERVACIONES__c</fullName>
    <label>OBSERVACIONES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>