force-app/main/default/objects/Supplier_Share__c/fields/Poder_de_compra_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Poder_de_compra_del_producto__c</fullName>
    <inlineHelpText>Debemos indicar en este campo el poder total de compra que tiene el cliente en el modelo que estamos indicando</inlineHelpText>
    <label>Poder de compra del producto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>