force-app/main/default/objects/Supplier_Share__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <formula>Units__c / Poder_de_compra_del_producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>