force-app/main/default/objects/Supplier_Share__c/fields/Price_1000__c.field-meta.xml
<CustomField>
    <fullName>Price_1000__c</fullName>
    <formula>Competitor_Price__r.Net_Price_1000__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price €/1000</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>