force-app/main/default/objects/Supplier_Share__c/fields/Price_ton__c.field-meta.xml
<CustomField>
    <fullName>Price_ton__c</fullName>
    <formula>Competitor_Price__r.Net_Price_ton__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price €/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>