force-app/main/default/objects/Supplier_Share__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Created for MS Case 00004984.</description>
    <formula>Product__r.ProductCode</formula>
    <inlineHelpText>This will display the product code via the selected &apos;Product&apos;</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>