force-app/main/default/objects/Supplier_Share__c/fields/Total_Purchase_Power__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Power__c</fullName>
    <formula>Account__r.Total_Purchase_Power__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Total Purchase Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>