force-app/main/default/objects/Supplier_Share__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Campo para indicar el año al que hace referencia la cuota a crear</description>
    <inlineHelpText>Campo para indicar el año al que hace referencia la cuota a crear</inlineHelpText>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>