force-app/main/default/objects/Supplier_Share__c/recordTypes/CUOTA_GENERAL.recordType-meta.xml
<RecordType>
    <fullName>CUOTA_GENERAL</fullName>
    <active>true</active>
    <description>Incluimos en este record type las cuotas totales de cada proveedor sin diferenciar por producto</description>
    <label>CUOTA GENERAL</label>
</RecordType>