force-app/main/default/objects/Supplier_Share__c/recordTypes/CUOTA_POR_PRODUCTO.recordType-meta.xml
<RecordType>
    <fullName>CUOTA_POR_PRODUCTO</fullName>
    <active>true</active>
    <description>En este record type añadimos las cuotas diferenciadas por producto</description>
    <label>CUOTA POR PRODUCTO</label>
</RecordType>