force-app/main/default/objects/Supplier_Share__c/validationRules/If_purchasing_power_null_dont_create.validationRule-meta.xml
<ValidationRule>
    <fullName>If_purchasing_power_null_dont_create</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Account__r.Total_Purchase_Power__c ) &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>No ha sido informado el campo &quot;Capacidad total de compra&quot; en la cuenta</errorMessage>
</ValidationRule>