force-app/main/default/objects/Supplier_Share__c/validationRules/No_Product_then_no_units_can_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Product_then_no_units_can_be_entered</fullName>
    <active>true</active>
    <description>User shouldn’t allow to enter product units if the product is blank</description>
    <errorConditionFormula>ISBLANK( Product__c ) &amp;&amp;    NOT(ISNULL( Units__c ))</errorConditionFormula>
    <errorMessage>No Product is selected</errorMessage>
</ValidationRule>