force-app/main/default/objects/Supplier_Share__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Units__c</columns>
    <columns>Product__c</columns>
    <columns>Competitor__c</columns>
    <columns>Competitor_Units__c</columns>
    <columns>Total_Purchase_Power__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>