force-app/main/default/objects/Supplier_Share__c/listViews/RESUMEN.listView-meta.xml
<ListView>
    <fullName>RESUMEN</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Units__c</columns>
    <columns>Competitor__c</columns>
    <columns>Competitor_Units__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>RESUMEN</label>
</ListView>